crates/gelx/tests/compile/macros/no_args.rs
use gelx::gelx;

fn main() {
	gelx!();
}
